apep_0185/v9/REPLICATION.md
# Replication Package: apep_0197

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `analysis_panel.rds`
- `exposure_panel.rds`
- `fig8_migration_data.rds`
- `iv_panel.rds`
- `iv_results.rds`
- `iv_weights_by_window.rds`
- `main_results.rds`
- `mechanism_results.rds`
- `migration_flows.rds`
- `migration_inflows.rds`
- `migration_outflows.rds`
- `network_communities.rds`
- `placebo_shock_results.rds`
- `raw_all_states.rds`
- `raw_counties_sf.rds`
- `raw_county_centroids.rds`
- `raw_employment.rds`
- `raw_germany_boundary.rds`
- `raw_nuts3_boundaries.rds`
- `raw_population.rds`
- `raw_qwi.rds`
- `raw_sci.rds`
- `raw_state_min_wages.rds`
- `raw_unemployment.rds`
- `robustness_results.rds`
- `shock_diagnostics.rds`
- `state_mw_panel.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.R`
- `02_clean_data.R`
- `02b_add_pop_weights.R`
- `03_main_analysis.R`
- `04_robustness.R`
- `04b_mechanisms.R`
- `04c_placebo_shocks.R`
- `05_figures.R`
- `06_tables.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
